--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ pages:
   stage: deploy
   script:
     - mkdir .public
-    - cp .* .public
+    - cp * .public
     - mv .public public
   artifacts:
     paths:
